<!--
//Deo Anthony Madrid (N01361264)
//Patrick Gomulka (N01347564)
//Erni Banaag (N01221990)
//Ricci Gamiao (N01363076) -->
<resources>
    <string name="app_name">SmartPlant</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_account">Account</string>
    <string name="hello">Hello!</string>
    <string name="loginTitle">THE SMART PLANT</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="the_smart_plant">The Smart Plant</string>
    <string name="exitMsg">Are you sure you want to close Smart Plant?</string>
    <string name="dashTitle">Smart Plant Dashboard</string>
    <string name="sensorsHeader">Sensors</string>
    <string name="sensorsButton">sensors</string>
    <string name="planthealth">plantHealth</string>
    <string name="planthistory">plantHistory</string>
    <string name="learnplants">learnPlants</string>
    <string name="register">Register</string>
    <string name="sign_in">Sign in</string>
    <string name="welcome_title">WELCOME TO SMART PLANT</string>
    <string name="remember_me">Remember Me</string>
    <string name="settings">Settings</string>
    <string name="feedback">Feedback</string>
    <string name="camera">Cam</string>
    <string name="status">Status</string>
    <string name="planted_30_days_ago">Planted 30 days ago</string>
    <string name="planttype">plantType</string>
    <string name="growth_90">Growth 90%</string>
    <string name="track">Track</string>
    <string name="light">Light</string>
    <string name="smart_plant">Smart Plant</string>
    <string name="homeTItle">Smart Plant Home</string>
    <string name="profileTitle">Smart Plant Profile</string>
    <string name="myProfile">My Email</string>
    <string name="idNum">User ID</string>
    <string name="preferences">Preferences</string>
    <string name="contactUs">Contact us</string>
    <string name="about">About</string>
    <string name="rateTheApp">Rate App</string>
    <string name="signOut">SIGN OUT</string>
    <string name="temp">Temp</string>
    <string name="string_temp">temp</string>
    <string name="peppermint">Peppermint</string>
    <string name="portrait_lock">Portrait Lock</string>
    <string name="accavatar">accAvatar</string>
    <string name="logo">logo</string>
    <string name="googlelogin">Google Login</string>
    <string name="web_client_id" translatable="false">349442084520-1nng74hadef4o0i3saaqhkb49ukdtf90.apps.googleusercontent.com</string>
    <string name="googleLogin">Google Login</string>
    <string name="update_plant">Update Plant</string>
    <string name="plant_name">Plant Name:</string>
    <string name="read_name">Read Name</string>
    <string name="statusText" />
    <string name="contactUS">Contact Us</string>
    <string name="callOrEmail">You can call or email us now.</string>
    <string name="sureSignOut">Are you sure you want to sign out?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="enterEmail">Please enter your Email</string>
    <string name="enterPassword">Please enter your Password</string>
    <string name="registerSuccess">Registration Successful</string>
    <string name="registerError">\"Registration Error: \"</string>
    <string name="signInSuccess">Signed in successful</string>
    <string name="signInError">\"Sign in error: \"</string>
    <string name="googleSignIn">Signing in to Google...</string>
    <string name="permGrant">Permission Granted</string>
    <string name="permDeny">Permission Denied</string>
    <string name="smartPlantOpenCam">Allow Smart Plant to open Camera?</string>
    <string name="allow">Allow</string>
    <string name="deny">Deny</string>
    <string name="accountRateFeedback">Please go to Account and click the Rate App button to send us a feedback. Thank you!</string>
    <string name="feedbackImportant">Hi, your feedback is important to us!</string>
    <string name="settingSelected">Settings Selected</string>
    <string name="databaseFailed">\"The database failed: \"</string>
    <string name="ok">OK</string>
    <string name="feedbackSelected">Feedback Selected</string>
    <string name="plantName">Plant Name</string>
    <string name="submit">fabBtn</string>
    <string name="tempVal">tempVal</string>
    <string name="temparature">temp</string>
    <string name="readbutton">Read Data Sensors</string>
    <string name="humid">humidVal</string>
    <string name="humidval">humidVal</string>
    <string name="motion_value">motion value</string>
    <string name="motionval">motionVal</string>
    <string name="lightValue">value</string>
    <string name="lightval">lightVal</string>
    <string name="waterval">waterVal</string>
    <string name="watervalue">waterValue</string>
    <string name="exit">Exit</string>
    <string name="history">history</string>
    <string name="phase_3">Phase 3</string>
    <string name="phase_2">Phase 2</string>
    <string name="phase_1">Phase 1</string>
    <string name="current_phase_phase_2">Current Phase: Phase 2</string>
    <string name="phase3">phase</string>
    <string name="phase2">phase</string>
    <string name="phase1">phase1</string>
    <string name="maintain">Continue maintaining your plant for
optimal health.</string>
    <string name="alert">⚠ NO ALERTS ⚠</string>
    <string name="yourplant">Your Plant:</string>
</resources>