<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#9C8BC34A"
    tools:context=".ui.home.HomeFragment">

    <TextView
        android:id="@+id/smartPlant"
        android:layout_width="335dp"
        android:layout_height="79dp"
        android:fontFamily="casual"
        android:gravity="center"
        android:text="@string/homeTItle"
        android:textAlignment="center"
        android:textColor="#503F6E"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.024" />

    <ImageView
        android:id="@+id/pepermintPlant"
        android:layout_width="393dp"
        android:layout_height="381dp"
        android:contentDescription="@string/planttype"
        android:src="@drawable/plantstatus"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.074" />

    <TextView
        android:id="@+id/dobPlant"
        android:layout_width="159dp"
        android:layout_height="26dp"
        android:fontFamily="sans-serif-light"
        android:gravity="center"
        android:text="@string/planted_30_days_ago"
        android:textColor="#070707"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/pepermintPlant"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/growthButton"
        android:layout_width="96dp"
        android:layout_height="48dp"
        android:backgroundTint="#8BC34A"
        android:text="@string/track"
        android:textColor="#37474F"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.095"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.66" />

    <Button
        android:id="@+id/tempsButton"
        android:layout_width="96dp"
        android:layout_height="48dp"
        android:backgroundTint="#8BC34A"
        android:text="@string/string_temp"
        android:textColor="#37474F"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.949"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.66"
        tools:ignore="TextContrastCheck,TextContrastCheck,TextContrastCheck" />

    <Button
        android:id="@+id/lightButton"
        android:layout_width="96dp"
        android:layout_height="48dp"
        android:backgroundTint="#8BC34A"
        android:text="@string/light"
        android:textColor="#37474F"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.66"
        tools:ignore="TextContrastCheck,TextContrastCheck,TextContrastCheck" />

    <Button
        android:id="@+id/updatePlant"
        android:layout_width="142dp"
        android:layout_height="48dp"
        android:backgroundTint="#8BC34A"
        android:text="@string/update_plant"
        android:textColor="#37474F"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.868"
        tools:ignore="TextContrastCheck,TextContrastCheck,TextContrastCheck" />

    <TextView
        android:layout_width="146dp"
        android:layout_height="47dp"
        android:text="@string/peppermint"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.524"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.122" />

    <TextView
        android:id="@+id/growthPlant"
        android:layout_width="99dp"
        android:layout_height="18dp"
        android:fontFamily="sans-serif-light"
        android:gravity="center"
        android:text="@string/growth_90"
        android:textColor="#070707"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/pepermintPlant"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.926" />

    <EditText
        android:id="@+id/plantNameUpdate"
        android:layout_width="154dp"
        android:layout_height="50dp"
        android:ems="10"
        android:hint="@string/plant_name"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.751"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/statusText"
        android:layout_width="76dp"
        android:layout_height="36dp"
        android:text="@string/statusText"
        android:textColor="#1B5E20"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.886"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.303" />


</androidx.constraintlayout.widget.ConstraintLayout>