<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#9C8BC34A"
    tools:context=".ui.account.AccountFragment">

    <TextView
        android:id="@+id/smartPlant"
        android:layout_width="335dp"
        android:layout_height="79dp"
        android:backgroundTint="#A82727"
        android:fontFamily="casual"
        android:gravity="center"
        android:text="@string/profileTitle"
        android:textAlignment="center"
        android:textColor="#503F6E"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.024" />

    <Button
        android:id="@+id/sOBtn"
        android:layout_width="123dp"
        android:layout_height="48dp"
        android:backgroundTint="#F44336"
        android:text="@string/signOut"
        android:textAlignment="center"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.866" />

    <Button
        android:id="@+id/portraitButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="@string/portrait_lock"
        android:text="@string/portrait_lock"
        android:textColor="#616161"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.781" />

    <Button
        android:id="@+id/mpBtn"
        android:layout_width="378dp"
        android:layout_height="67dp"
        android:backgroundTint="#5EFFFFFF"
        android:text="@string/myProfile"
        android:textAlignment="textStart"
        android:textColor="#A9000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.515"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.262"
        app:rippleColor="#00FFFFFF" />

    <Button
        android:id="@+id/rateBtn"
        android:layout_width="378dp"
        android:layout_height="67dp"
        android:backgroundTint="#5EFFFFFF"
        android:text="@string/rateTheApp"
        android:textAlignment="textStart"
        android:textColor="#A9000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.515"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.563" />

    <Button
        android:id="@+id/abtBtn"
        android:layout_width="378dp"
        android:layout_height="67dp"
        android:backgroundTint="#5EFFFFFF"
        android:text="@string/about"
        android:textAlignment="textStart"
        android:textColor="#33691E"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.515"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.664"
        tools:ignore="TextContrastCheck,TextContrastCheck,TextContrastCheck" />

    <Button
        android:id="@+id/cntBtn"
        android:layout_width="378dp"
        android:layout_height="67dp"
        android:backgroundTint="#5EFFFFFF"
        android:text="@string/contactUs"
        android:textAlignment="textStart"
        android:textColor="#A9000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.515"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.462" />

    <Button
        android:id="@+id/idBtn"
        android:layout_width="378dp"
        android:layout_height="67dp"
        android:backgroundTint="#5EFFFFFF"
        android:text="@string/idNum"
        android:textAlignment="textStart"
        android:textColor="#A9000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.515"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.362" />

    <ImageView
        android:id="@+id/accAvatar"
        android:layout_width="85dp"
        android:layout_height="69dp"
        android:contentDescription="@string/accavatar"
        android:src="@drawable/accavatar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.143"
        tools:ignore="ImageContrastCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>