<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#9C8BC34A"
    tools:context=".ui.dashboard.DashboardFragment">

    <TextView
        android:id="@+id/dashName"
        android:layout_width="335dp"
        android:layout_height="79dp"
        android:fontFamily="casual"
        android:gravity="center"
        android:text="@string/dashTitle"
        android:textColor="#503F6E"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.041" />

    <ImageButton
        android:id="@+id/learnButton"
        android:layout_width="181dp"
        android:layout_height="168dp"
        android:backgroundTint="#9C8BC34A"
        android:contentDescription="@string/learnplants"
        android:scaleType="fitXY"
        android:src="@drawable/learnbuttonnew"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.93"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.641"
        tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck,ImageContrastCheck" />

    <ImageButton
        android:id="@+id/historyButton"
        android:layout_width="181dp"
        android:layout_height="168dp"
        android:backgroundTint="#9C8BC34A"
        android:contentDescription="@string/planthistory"
        android:scaleType="fitXY"
        android:src="@drawable/historybuttonnew"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.069"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.641"
        tools:ignore="SpeakableTextPresentCheck,ImageContrastCheck" />

    <ImageButton
        android:id="@+id/healthButton"
        android:layout_width="181dp"
        android:layout_height="168dp"
        android:backgroundTint="#9C8BC34A"
        android:contentDescription="@string/planthealth"
        android:scaleType="fitXY"
        android:src="@drawable/planthealthnew"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.93"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.314"
        tools:ignore="SpeakableTextPresentCheck,ImageContrastCheck" />

    <ImageButton
        android:id="@+id/sensorsButton"
        android:layout_width="181dp"
        android:layout_height="168dp"
        android:backgroundTint="#9C8BC34A"
        android:contentDescription="@string/sensorsButton"
        android:scaleType="fitXY"
        android:src="@drawable/sensorbutton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.069"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.314"
        tools:ignore="SpeakableTextPresentCheck,ImageContrastCheck" />

    <com.getbase.floatingactionbutton.FloatingActionsMenu
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="18dp"
        app:fab_expandDirection="up"
        app:fab_labelsPosition="left"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.88">

        <com.getbase.floatingactionbutton.FloatingActionButton
            android:id="@+id/fabBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:fab_colorDisabled="#FFF"
            app:fab_icon="@drawable/circlecheck"
            app:fab_size="mini"
            app:fab_title="Icon 1" />

        <com.getbase.floatingactionbutton.FloatingActionButton
            android:id="@+id/fabfeedbackBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:fab_colorDisabled="#FFF"
            app:fab_icon="@drawable/feedback"
            app:fab_size="mini"
            app:fab_title="Icon 1" />


    </com.getbase.floatingactionbutton.FloatingActionsMenu>


</androidx.constraintlayout.widget.ConstraintLayout>